--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "css-loader": "0.26.1",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
+    "enzyme": "^2.7.1",
     "eslint": "3.16.1",
     "eslint-config-react-app": "^0.6.1",
     "eslint-loader": "1.6.0",
@@ -46,6 +47,7 @@
     "object-assign": "4.1.1",
     "postcss-loader": "1.2.2",
     "promise": "7.1.1",
+    "react-addons-test-utils": "^15.4.2",
     "react-dev-utils": "^0.5.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
@@ -61,9 +63,13 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "deploy": "aws s3 sync ./build s3://msinc-test",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
+
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec|unit))\\.jsx?$",
+
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
     ],
