--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "dependencies": {
     "bluebird": "^3.5.0",
+    "chart.js": "^2.5.0",
     "clone": "^2.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
-    "superagent": "^3.5.0",
     "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.0"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
@@ -67,9 +68,7 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
-
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec|unit))\\.jsx?$",
-
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
     ],
