--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "bluebird": "^3.5.0",
     "chart.js": "^2.5.0",
     "clone": "^2.1.0",
+    "d3": "^4.7.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-faux-dom": "^3.0.1",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
