--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux": "^3.6.0",
     "redux-logger": "^2.8.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^2.5.4",
     "superagent": "^3.5.0"
   },
   "devDependencies": {
