working OAuth on server side: how to access session from client?

--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "connect-redis": "^3.2.0",
+    "cookie-parser": "^1.4.3",
+    "ejs": ">= 0.0.0",
+    "express": ">= 0.0.0",
+    "express-session": "^1.15.1",
+    "passport": ">= 0.0.0",
+    "passport-google-oauth2": ">= 0.0.0",
     "bluebird": "^3.5.0",
     "chart.js": "^2.5.0",
     "clone": "^2.1.0",
     "d3": "^4.7.2",
+    "express": "^4.15.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-faux-dom": "^3.0.1",
